apps/minio/overlays/backup-server/ipallowlist.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipallowlist-minio-management
  namespace: minio
spec:
  ipAllowList:
    ## 設定 minio-api 的IP範圍
    sourceRange:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
