apps/minio/overlays/backup-server/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
spec:
  entryPoints:
    - minio-api
  routes:
    ## minio route
    - match: Host(`backup.rd0.hwacom.com`)
      kind: Rule
      services:
        - name: minio
          port: 9000
      # middlewares:
        # - name: ipallowlist-minio-management
